--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -23,3 +23,15 @@ p-dropdown {
         margin-right: 10px;
     }
 }
+
+.custom-galleria-footer {
+    position: absolute;
+    bottom: 210px;
+    right: 20px;
+    color: white;
+    padding: 10px;
+    background: #333;
+    z-index: 9999999999; 
+    border-radius: 3px;
+    opacity: 0.7;
+}
