--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="home container" *ngIf="data$ | async as data">
     <div class="tag">
         <span>Главная страница</span>
@@ -644,3 +645,4 @@
         </div>
     </ng-template>
 </p-confirmDialog>
+<app-footer></app-footer>
