--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -26,7 +26,7 @@ p-dropdown {
 
 .custom-galleria-footer {
     position: absolute;
-    bottom: 210px;
+    bottom: 120px;
     right: 20px;
     color: white;
     padding: 10px;
@@ -34,4 +34,5 @@ p-dropdown {
     z-index: 10; 
     border-radius: 3px;
     opacity: 0.7;
+    font-size: 14px;
 }
