--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -151,7 +151,7 @@
             <h3 class='title'>Распроданный</h3>
             <div class="buy">
                 <h3>{{data.data.attributes.sold_date | date:'dd-MM-YYYY'}}</h3>
-                <p>{{data.data.attributes.sold_date | date:'HH:mm'}} РТ</p>
+                <p>{{data.data.attributes.sold_date | date:'HH:mm'}} МСК</p>
             </div>
 
             <div class="buy">
