--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -4,7 +4,9 @@
         position: absolute;
         z-index: 10;
         top: 10px;
-        right: 0;
+        font-size: 20px;
+        transform: scale(1.5);
+        right: 5px;
     }
 }
 .selectedItem {
