--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -231,7 +231,7 @@
                     <div class="icon">
                         <img src="/img/transmissionIcon.svg" alt="" class="img imgFit">
                     </div>
-                    <p>Привод: <span>Передний привод</span></p>
+                    <p>Привод: <span>{{data.data.attributes.whill_drive}}</span></p>
                 </div>
                 <div class="featuresItem">
                     <div class="icon">
