--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="logo">
             <img src="img/logo.png" alt="" class="img imgFit">
         </div>
-        <button [routerLink]="['/']" class="button buttonSecondary">Поиск автомобиля</button>
+        <button (click)="goToHome()" class="button buttonSecondary">Поиск автомобиля</button>
     </div>
     <div class="footerMid">
         <div class="footerMidItem">
